# red

./: Cargo.toml
src/: editor.rs  main.rs  util.rs
