[package]
name = "red"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
crossterm = "0.25"
ropey = "1.5.0"
